--- a/Pet-Story/src/app/app.component.scss
+++ b/Pet-Story/src/app/app.component.scss
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  overflow: hidden;
 }
 
 *, ul, li {
