feat: add alligator video

--- a/Pet-Story/src/app/animals/components/crocodile/crocodile.component.html
+++ b/Pet-Story/src/app/animals/components/crocodile/crocodile.component.html
@@ -1,4 +1,13 @@
-<div>
-  <h2>Crocodile cams</h2>
-  <app-video></app-video>
+<div class="animal">
+  <h2 class="animal__title">Panda camera</h2>
+  <div class="animal__youtube" >
+    <app-crocodile-video></app-crocodile-video>
+    <app-crocodile-info></app-crocodile-info>
+  </div>
+  <div class="animal__flowers">
+    <app-flowers></app-flowers>
+  </div>
+  <div class="animal__image">
+    <app-gorilla-foto [photoPath]="photoPath"></app-gorilla-foto>
+  </div>
 </div>
