feat: finish alligator page

--- a/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.html
+++ b/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.html
@@ -21,7 +21,7 @@
       <span class="info__paragraf-name">Range: </span><span class="info__text">Eastern Asia</span><span class="info__important"> [VIEW MAP]</span>
     </div>
     <div class="full__item">
-      <span class="info__paragraf-name">Habitat: </span><span class="info__text">Habitat: Forests (Simulation of the <span class="info__important">natural environment</span>)</span>
+      <span class="info__paragraf-name">Habitat: </span><span class="info__text">Forests (Simulation of the <span class="info__important">natural environment</span>)</span>
     </div>
     <div class="full__item" style="position: relative;">
       <div class="full__overflow" [class.closed]="isInfoClosed"></div>
