--- a/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.html
+++ b/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.html
@@ -1,11 +1,11 @@
 <section class="info">
-  <h2 class="info__title">Giant Panda</h2>
+  <h2 class="info__title">Alligator</h2>
   <div class="info__main">
     <div class="info__foto">
       <img src="assets/images/crocodile-info.png">
     </div>
     <div class="info__description">
-      <div class="info__content">Giant pandas are very <span class="info__important">unusual animals</span> that eat almost exclusively <span class="info__important">bamboo</span>, which is very low in nutrients. Because of this, they have many unique adaptations for their low-energy lifestyle. Giant pandas are solitary, with males and females coming together only briefly to mate. Habitat loss is the primary threat to this species. Its popularity around the world has helped the giant panda become the focus of successful conservation programs.</div>
+      <div class="info__content">Alligators differ from other members of the crocodile family in having a <span class="info__important">wider snout</span>; their eyes are more dorsal (at the top of the head). Large alligators' eyes glow red; small alligators' eyes glow green. Alligators can be spotted in the dark by this sign.</div>
       <div class="info__button">
         <app-button [content]="content"></app-button>
       </div>
@@ -15,39 +15,39 @@
   <div class="info__full" [class.closed]="isInfoClosed">
 
     <div class="full__item">
-      <span class="info__paragraf-name">Diet: </span><span class="info__text">Herbivore (They also are offered nutritious high-fiber biscuits and fruits such as apples or <span class="info__important">sweet potatoes)</span>)</span>
+      <span class="info__paragraf-name">Diet: </span><span class="info__text">Carnivore (Fish, lizards, <span class="info__important">snakes</span>, mice)</span>
     </div>
     <div class="full__item">
-      <span class="info__paragraf-name">Range: </span><span class="info__text">Eastern Asia</span><span class="info__important"> [VIEW MAP]</span>
+      <span class="info__paragraf-name">Range: </span><span class="info__text">Florida, United States of America</span><span class="info__important"> [VIEW MAP]</span>
     </div>
     <div class="full__item">
-      <span class="info__paragraf-name">Habitat: </span><span class="info__text">Habitat: Forests (Simulation of the <span class="info__important">natural environment</span>)</span>
+      <span class="info__paragraf-name">Habitat: </span><span class="info__text">Alligators live mostly in fresh brackish water, in marshes, canals, and lakes.</span>
     </div>
     <div class="full__item" style="position: relative;">
       <div class="full__overflow" [class.closed]="isInfoClosed"></div>
       <h3 class="info__paragraf-name">General Information: </h3>
-      <p class="info__text">Giant pandas are bears and are members of the <span class="info__important">Order Carnivora</span>. They are unique because, although they evolved among the mostly carnivorous bear species of the world, their diet is vegetarian. Despite the availability of other plants, they feed almost exclusively on bamboo.</p>
-      <p class="info__text">Giant pandas communicate with one another in dense bamboo forests primarily by scent. Males regularly scent-mark the margins of their territories by adopting a “headstand” position to mark a bamboo stalk with their anogenital glands.</p>
+      <p class="info__text">Alligators are large, semi-aquatic, carnivorous reptiles with four paws and a huge tail that is half the length of an animal, helps them move around in water used to make water pools in the dry seasons (alligator holes), used as weapons, and stores fat that helps them overwinter. Alligators are cold-blooded; their bodies do not produce heat. They get it by basking in the sun.</p>
+
     </div>
     <div class="full__item">
       <h3 class="info__paragraf-name">Physical features and characteristics: </h3>
-      <p class="info__text">The low nutrient value of bamboo figures prominently in the biology of the giant panda. They have extremely powerful jaws and associated muscles to crunch through the woody stems of bamboo. Each hand bears a <span class="info__important">specialized metacarpal bone</span> in the wrist that functions as a thumb would in humans, to allow them to grasp the circular bamboo stalks. While other herbivorous animals, such as antelope, zebras, or rabbits, have very long digestive tracts, the giant panda retains an essentially bear-like digestive tract. Thus, the digestive efficiency of the bamboo they consume is quite low. Examination of the feces demonstrates that their food has been only partially digested. The low nutrient value of their food and their low digestive efficiency results in an animal that is constrained to a low-metabolism. This lifestyle explains why giant pandas sleep so often and why they eat such <span class="info__important">enormous</span> amounts of bamboo.</p>
-      <p class="info__text">Individuals do not travel long distances, and males will establish territories that are not particularly large compared with other species in the Order Carnivora. Adult females average about 230 pounds in weight, with males sometimes reaching 350 pounds. Their hair is very dense, conserving their body heat in their cold habitats. Their iconic coloration remains a mystery to scientists but may aid with camouflage.</p>
-
+      <p class="info__text">There are two types of alligators: the American alligator, which grows to 19 feet (3.5 m) long and up to 600 pounds (270 kg), and the Chinese alligator, which grows to 6 feet (1.8 m) long.</p>
+      <p class="info__text">Having four paws, they swim very well, mainly using their tail to move through the water and, to a lesser extent, using their webbed feet.</p>
+      <p class="info__text">Alligators are stooping (as are many reptiles); they walk in a flat-footed manner. On land, they can move relatively quickly, but only in short bursts.  Different species have <span class="info__important">different speeds</span>, which also depends on the type of movement (crawling, paddling, swimming). Alligators are the fastest crocodiles on earth, they can move at speeds of up to 17 km per hour. They swim at a speed of about 10 km per hour. Crawling, the animal can travel 5-10 km per hour.</p>
     </div>
     <div class="full__item">
       <h3 class="info__paragraf-name">Lifestyle and reproduction: </h3>
-      <p class="info__text">Females are fertile for only a very short period of time and exhibit delayed implantation. Although twins are not unusual, a mother will typically only rear one cub. Adults are solitary, with mating pairings being quite brief. The tiny cubs are altricial, or not born in an advanced state of development, and are completely helpless, blind and deaf, and without the fur <span class="info__important">necessary</span> to regulate their own body temperatures. As a result, maternal care is extensive. Cubs do not begin eating bamboo until they are around a year old.</p>
-      <p class="info__text info__text_before-list">When twins are born in zoos, extraordinary measures are taken to train the female to accept swapping of her cubs regularly 24 hours a day, so that she only cares for one a time, but that both receive adequate care.</p>
-
+      <p class="info__text">Alligators are usually solitary animals. They live 30 to 35 years in the wild, and up to 50 years in captivity.  These animals have a wide range of calls and vocalizations. These calls are used in mating, defining territory, and distress calls (babies grunt to alert their mother when in danger), etc.</p>
+      <p class="info__text">Alligators breed in the spring from April to May. One month after noisy mating and bonding rituals, the female lays up to 50 eggs in a large (three feet high and six feet wide) nest, which is made of dirt, leaves, and twigs on non-wet ground. Alligators do not incubate their <span class="info__important">eggs</span> so as not to crush them. The vegetation that rots in the nest keeps the future babies warm.</p>
+      <p class="info__text">The temperature in the nest determines the sex of the chicks. If the eggs were incubated at 93 degrees Fahrenheit (34 degrees Celsius), the embryo develops as a male; temperatures below 86 degrees Fahrenheit (30 degrees Celsius) result in a female embryo. The would-be mother alligator guards the nest from predators. The eggs hatch after 2 months, producing chicks about 6 inches long (15 cm). A group of babies (called a pod) are protected by the female for a year.</p>
     </div>
     <div class="full__item">
       <h3 class="info__paragraf-name">Habitat: </h3>
-      <p class="info__text">Their preferred cool and wet bamboo forests are found at <span class="info__important">elevations</span> between 5,000 and 10,000 feet. Cubs are raised in rocky crevices, dead trees, or caves.</p>
+      <p class="info__text">Alligators live mostly in fresh brackish water, in marshes, canals, and lakes. The American alligator is found only in the southeastern United States, the Chinese alligator is found in the lower basin of the Yangtze River that flows in China.</p>
     </div>
     <div class="full__item">
       <h3 class="info__paragraf-name">Diet: </h3>
-      <p class="info__text">Our animal care professionals offer each adult or subadult giant panda about 80 pounds of various bamboo species per day, and they generally select and consume only about third of that. They also are offered nutritious <span class="info__important">high-fiber biscuits</span> and fruits such as apples or sweet potatoes.</p>
+      <p class="info__text">Alligators are awake and feed mostly at night. Younger ones eat insects, shrimp, snails, fish, tadpoles, and frogs. Adults eat fish, birds, turtles, reptiles, and mammals. They swallow their prey whole. Their conical teeth are used to catch their prey without tearing it to pieces. The animal has about 80 teeth; a lost tooth recovers quickly.</p>
 
     </div>
   </div>
