--- a/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.scss
+++ b/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.scss
@@ -9,6 +9,11 @@
     color: $green;
   }
 
+  &__description {
+    display: flex;
+    flex-direction: column;
+  }
+
   &__main {
     display: flex;
     gap: 70px;
@@ -18,7 +23,7 @@
   &__content {
     @include fonts(26px, 140%, 500);
     color: $gray_smoky;
-    margin-bottom: 41px;
+    margin-bottom: auto;
   }
 
   &__line {
@@ -61,7 +66,7 @@
     border-radius: 5px;
     position: relative;
     z-index: 10;
-    margin-top: 10px;
+    margin-top: 30px;
     &:hover {
       cursor: pointer;
     }
@@ -96,7 +101,7 @@
   transition: 2s;
 }
 .info__full.closed {
-  height: 286px;
+  height: 280px;
   overflow: hidden;
 
 }
