--- a/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.scss
+++ b/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.scss
@@ -67,6 +67,7 @@
     position: relative;
     z-index: 10;
     margin-top: 30px;
+    outline: none;
     &:hover {
       cursor: pointer;
     }
