--- a/Pet-Story/src/app/animals/components/info/info.component.scss
+++ b/Pet-Story/src/app/animals/components/info/info.component.scss
@@ -62,6 +62,7 @@
     position: relative;
     z-index: 10;
     margin-top: 10px;
+    outline: none;
     &:hover {
       cursor: pointer;
     }
