fix: change styles

--- a/Pet-Story/src/app/animals/animals.component.html
+++ b/Pet-Story/src/app/animals/animals.component.html
@@ -1,3 +1,4 @@
+<div class="spinner" *ngIf="loading"></div>
 <section class="animals">
   <div class="animals__sidebar">
     <app-navigation></app-navigation>
