--- a/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.html
+++ b/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.html
@@ -51,6 +51,6 @@
 
     </div>
   </div>
-  <button class="info__read-button" (click)="onClick()">Read less</button>
+  <button class="info__read-button" (click)="onClick()">{{isInfoClosed? 'Read more': 'Read less'}}</button>
 </section>
 
