--- a/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.html
+++ b/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.html
@@ -51,7 +51,7 @@
 
     </div>
   </div>
-  <button class="info__read-button" (click)="onClick()">Read less</button>
+  <button class="info__read-button" (click)="onClick()">{{isInfoClosed? 'Read more': 'Read less'}}</button>
 </section>
 
 
