--- a/Pet-Story/src/app/animals/components/crocodile/crocodile.component.html
+++ b/Pet-Story/src/app/animals/components/crocodile/crocodile.component.html
@@ -1,5 +1,5 @@
 <div class="animal">
-  <h2 class="animal__title">Panda camera</h2>
+  <h2 class="animal__title">Alligator camera</h2>
   <div class="animal__youtube" >
     <app-crocodile-video></app-crocodile-video>
     <app-crocodile-info></app-crocodile-info>
