--- a/Pet-Story/src/app/animals/components/info/info.component.html
+++ b/Pet-Story/src/app/animals/components/info/info.component.html
@@ -68,5 +68,5 @@
       <p class="info__text">Here at Zoo, we provide a medley of fruits and vegetables to our western lowland gorillas. These include apples, oranges, bananas, raisins, sweet potatoes, cabbage, collards, and primate chow. In the morning, vegetables and fruit are chopped up and scattered around the habitat. From there, the gorillas come outside and forage for their food as they would in the wild. Browse foods including bamboo, banana leaves, mulberry, elm and willow are also <span class="info__important">scattered</span> in their habitat.</p>
     </div>
   </div>
-  <button class="info__read-button" (click)="onClick()">Read less</button>
+  <button class="info__read-button" (click)="onClick()">{{isInfoClosed? 'Read more': 'Read less'}}</button>
 </section>
