--- a/Pet-Story/src/app/animals/components/eagle/eagle.component.html
+++ b/Pet-Story/src/app/animals/components/eagle/eagle.component.html
@@ -1,1 +1,14 @@
-<p>eagle works!</p>
+<div class="animal">
+  <h2 class="animal__title">Eagle camera</h2>
+  <div class="animal__youtube" >
+    <app-eagle-video></app-eagle-video>
+    <app-crocodile-info></app-crocodile-info>
+  </div>
+  <div class="animal__flowers">
+    <app-flowers></app-flowers>
+  </div>
+  <div class="animal__image">
+    <app-gorilla-foto [photoPath]="photoPath"></app-gorilla-foto>
+  </div>
+</div>
+
