--- a/Pet-Story/src/app/animals/animals.component.scss
+++ b/Pet-Story/src/app/animals/animals.component.scss
@@ -6,7 +6,7 @@
 
 .animals {
   position: relative;
-  // min-height: calc(100vh - 500px);
+  min-height: calc(100vh - 440px);
   padding-top: 40px;
 
   &__sidebar {
