--- a/Pet-Story/src/app/animals/components/eagle/eagle.component.html
+++ b/Pet-Story/src/app/animals/components/eagle/eagle.component.html
@@ -2,7 +2,7 @@
   <h2 class="animal__title">Eagle camera</h2>
   <div class="animal__youtube" >
     <app-eagle-video></app-eagle-video>
-    <app-crocodile-info></app-crocodile-info>
+    <app-eagle-info></app-eagle-info>
   </div>
   <div class="animal__flowers">
     <app-flowers></app-flowers>
