--- a/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.scss
+++ b/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.scss
@@ -2,11 +2,12 @@
 
 .info {
   transition: height 2s;
-
+  padding-top: 80px;
 
   &__title {
     @include fonts(48px, 120%);
     color: $green;
+    margin-bottom: 25px;
   }
 
   &__foto {
@@ -17,7 +18,11 @@
   &__description {
     display: flex;
     flex-direction: column;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
+  }
+
+  &__button {
+    margin-left: 5px;
   }
 
   &__main {
@@ -80,7 +85,7 @@
   }
   &__full {
     overflow: hidden;
-    padding-top: 48px;
+    padding-top: 37px;
     transition: 0.5s;
     height: 1020px;
   }
