refactor: change type images

--- a/Pet-Story/src/app/animals/components/crocodile/crocodile-video/crocodile-video.component.html
+++ b/Pet-Story/src/app/animals/components/crocodile/crocodile-video/crocodile-video.component.html
@@ -39,19 +39,19 @@
   <swiper (swiper)="thumbsSwiper = $event" [spaceBetween]="30" [slidesPerView]="4" [freeMode]="true" [navigation]="true"
   [watchSlidesProgress]="true" class="mySwiper" #Tswiper>
   <ng-template swiperSlide>
-    <img src="assets/images/crocodile_video.jpg" />
+    <img src="assets/images/crocodile_video.webp" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/crocodile_video.jpg" />
+    <img src="assets/images/crocodile_video.webp" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/crocodile_video.jpg" />
+    <img src="assets/images/crocodile_video.webp" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/crocodile_video.jpg" />
+    <img src="assets/images/crocodile_video.webp" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/crocodile_video.jpg" />
+    <img src="assets/images/crocodile_video.webp" />
   </ng-template>
 </swiper>
 </section>
