--- a/Pet-Story/src/app/animals/components/eagle/eagle-video/eagle-video.component.html
+++ b/Pet-Story/src/app/animals/components/eagle/eagle-video/eagle-video.component.html
@@ -63,31 +63,31 @@
   <swiper (swiper)="thumbsSwiper = $event" [spaceBetween]="30" [slidesPerView]="4" [freeMode]="true" [navigation]="true"
   [watchSlidesProgress]="true" class="mySwiper" #Tswiper>
   <ng-template swiperSlide>
-    <img src="assets/images/eagle_video.jpg" />
+    <img src="assets/images/eagle_video.webp" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/eagle_video1.jpg" />
+    <img src="assets/images/eagle_video1.webp" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/eagle_video2.jpg" />
+    <img src="assets/images/eagle_video2.webp" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/eagle_video3.jpg" />
+    <img src="assets/images/eagle_video3.webp" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/eagle_video4.jpg" />
+    <img src="assets/images/eagle_video4.webp" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/eagle_video5.jpg" />
+    <img src="assets/images/eagle_video5.webp" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/eagle_video6.jpg" />
+    <img src="assets/images/eagle_video6.webp" />
   </ng-template>
   <ng-template swiperSlide>
     <img src="assets/images/eagle_video7.jpg" />
   </ng-template>
   <ng-template swiperSlide>
-    <img src="assets/images/eagle_video8.jpg" />
+    <img src="assets/images/eagle_video8.webp" />
   </ng-template>
 </swiper>
 </section>
