--- a/Pet-Story/src/app/animals/components/info/info.component.html
+++ b/Pet-Story/src/app/animals/components/info/info.component.html
@@ -2,7 +2,7 @@
   <h2 class="info__title">Western Lowland Gorilla</h2>
   <div class="info__main">
     <div class="info__foto">
-      <img src="assets/images/gorilla_info.png">
+      <img src="assets/images/gorilla_info.webp">
     </div>
     <div class="info__description">
       <div class="info__content">Western lowland gorillas live in troops led by a dominant silverback, several adult females, and their offspring.
