refactor: change code

--- a/Pet-Story/src/app/animals/components/eagle/eagle-info/eagle-info.component.html
+++ b/Pet-Story/src/app/animals/components/eagle/eagle-info/eagle-info.component.html
@@ -15,10 +15,12 @@
   <div class="info__full" [class.closed]="isInfoClosed">
 
     <div class="full__item">
-      <span class="info__paragraf-name">Diet: </span><span class="info__text">Carnivore (Fish, lizards, snakes, mice).</span>
+      <span class="info__paragraf-name">Diet: </span>
+      <span class="info__text">Carnivore (Fish, lizards, snakes, mice).</span>
     </div>
     <div class="full__item">
-      <span class="info__paragraf-name">Range: </span><span class="info__text">Eurasia and Africa</span><span class="info__important"> [VIEW MAP]</span>
+      <span class="info__paragraf-name">Range: </span>
+      <span class="info__text">Eurasia and Africa</span><span class="info__important"> [VIEW MAP]</span>
     </div>
     <div class="full__item">
       <span class="info__paragraf-name">Habitat: </span><span class="info__text">Mountainous or semi-open landscapes (Simulation of the natural environment).</span>
