--- a/Pet-Story/src/app/start-page/components/testimonails/card/card.component.html
+++ b/Pet-Story/src/app/start-page/components/testimonails/card/card.component.html
@@ -1,6 +1,8 @@
 <div class="card">
   <div class="card__author">
-    <div class="card__foto"><img src="{{card.image}}" alt="user image"> </div>
+    <div class="card__foto">
+      <img src="{{card.image}}" alt="user image">
+    </div>
     <div class="card__author-info">
       <h3 class="card__title">{{card.title}}</h3>
       <ul class="card__subtitle">
