--- a/Pet-Story/src/app/animals/animals.component.scss
+++ b/Pet-Story/src/app/animals/animals.component.scss
@@ -1,4 +1,4 @@
-@import '../../styles.scss';
+@import "../../styles.scss";
 
 :host {
   background: $white;
@@ -26,11 +26,10 @@
 }
 
 @keyframes round {
-    from {
-        rotate: 0deg;
-
-    }
-    to {
-        rotate: 360deg;
-    }
+  from {
+    rotate: 0deg;
+  }
+  to {
+    rotate: 360deg;
+  }
 }
