--- a/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.html
+++ b/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.html
@@ -15,13 +15,20 @@
   <div class="info__full" [class.closed]="isInfoClosed">
 
     <div class="full__item">
-      <span class="info__paragraf-name">Diet: </span><span class="info__text">Carnivore (Fish, lizards, <span class="info__important">snakes</span>, mice)</span>
+      <span class="info__paragraf-name">Diet: </span>
+      <span class="info__text">Carnivore (Fish, lizards,
+        <span class="info__important">snakes</span>
+        , mice)
+      </span>
     </div>
     <div class="full__item">
-      <span class="info__paragraf-name">Range: </span><span class="info__text">Florida, United States of America</span><span class="info__important"> [VIEW MAP]</span>
+      <span class="info__paragraf-name">Range: </span>
+      <span class="info__text">Florida, United States of America</span>
+      <span class="info__important"> [VIEW MAP]</span>
     </div>
     <div class="full__item">
-      <span class="info__paragraf-name">Habitat: </span><span class="info__text">Alligators live mostly in fresh brackish water, in marshes, canals, and lakes.</span>
+      <span class="info__paragraf-name">Habitat: </span>
+      <span class="info__text">Alligators live mostly in fresh brackish water, in marshes, canals, and lakes.</span>
     </div>
     <div class="full__item" style="position: relative;">
       <div class="full__overflow" [class.closed]="isInfoClosed"></div>
