--- a/Pet-Story/src/app/animals/components/eagle/eagle-info/eagle-info.component.scss
+++ b/Pet-Story/src/app/animals/components/eagle/eagle-info/eagle-info.component.scss
@@ -1,7 +1,6 @@
-@import '../../../../../styles.scss';
+@import "../../../../../styles.scss";
 
 .info {
-
   &__title {
     @include fonts(48px, 120%);
     color: $green;
@@ -96,11 +95,13 @@
     width: 1162px;
     top: 0;
     left: 0;
-    background: linear-gradient(360deg, #ffffff -13.95%, rgba(255, 248, 248, 0) 88.37%);
+    background: linear-gradient(
+      360deg,
+      #ffffff -13.95%,
+      rgba(255, 248, 248, 0) 88.37%
+    );
   }
-
 }
-
 
 .info__full.closed {
   height: 280px;
