--- a/Pet-Story/src/app/animals/components/gorilla/gorilla.component.scss
+++ b/Pet-Story/src/app/animals/components/gorilla/gorilla.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles.scss';
+@import "../../../../styles.scss";
 
 :host {
   background: $white;
@@ -6,7 +6,6 @@
 
 .animal {
   margin: 0 auto;
-
 
   &__title {
     text-align: left;
@@ -25,5 +24,4 @@
   &__image {
     width: 100%;
   }
-
 }
