--- a/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.scss
+++ b/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles.scss';
+@import "../../../../../styles.scss";
 
 .info {
   transition: height 2s;
@@ -92,7 +92,6 @@
 }
 
 .full {
-
   &__item {
     margin-bottom: 20px;
   }
@@ -104,9 +103,12 @@
     width: 1162px;
     top: 0;
     left: 0;
-    background: linear-gradient(360deg, #ffffff -13.95%, rgba(255, 248, 248, 0) 88.37%);
+    background: linear-gradient(
+      360deg,
+      #ffffff -13.95%,
+      rgba(255, 248, 248, 0) 88.37%
+    );
   }
-
 }
 
 .info__full.closed {
