--- a/Pet-Story/src/app/animals/components/panda/panda-video/panda-video.component.scss
+++ b/Pet-Story/src/app/animals/components/panda/panda-video/panda-video.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles.scss';
+@import "../../../../../styles.scss";
 
 .video {
   width: 1162px;
@@ -46,9 +46,8 @@
     align-items: center;
     margin: 0 auto;
     width: 1324px;
-    top: -137px;
+    top: -166px;
     left: -81px;
-
   }
 }
 
@@ -56,7 +55,6 @@
 @import "swiper/scss/free-mode";
 @import "swiper/scss/navigation";
 @import "swiper/scss/thumbs";
-
 
 .swiper {
   width: 100%;
@@ -129,7 +127,6 @@ app-panda-video div.swiper-wrapper div.swiper-slide.swiper-slide-prev {
   width: 268px;
   height: 210px;
 }
-
 
 app-panda-video .mySwiper div.swiper-wrapper {
   height: 210px;
