--- a/Pet-Story/src/app/core/components/footer/footer.component.scss
+++ b/Pet-Story/src/app/core/components/footer/footer.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles.scss';
-*{
+@import "../../../../styles.scss";
+* {
   box-sizing: border-box;
 }
 
@@ -52,8 +52,7 @@
   }
 }
 
-
-.footer div.footer__button app-button.test  button.button {
+.footer div.footer__button app-button.test button.button {
   border-radius: 5px;
   width: 300px;
   height: 54px;
@@ -96,5 +95,4 @@
     @include fonts(24px, 120%);
     color: #ffffff;
   }
-
 }
