--- a/Pet-Story/src/app/core/components/header/header.component.html
+++ b/Pet-Story/src/app/core/components/header/header.component.html
@@ -2,21 +2,41 @@
   <div class="logo"><app-logo></app-logo></div>
   <nav class="header__nav nav">
     <ul class="nav__list">
-      <li class="nav__list-item" >
-        <a class="nav__list-link"
-         routerLink="/"
-         routerLinkActivate="active"
-         [class.active]="!(url.includes('map') || url.includes('animals') || url.includes('contact'))">About
+      <li class="nav__list-item">
+        <a
+          class="nav__list-link"
+          routerLink="/"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          >About
         </a>
       </li>
-      <li class="nav__list-item" >
-        <a class="nav__list-link" routerLink="/map" routerLinkActivate="active" [class.active]="url.includes('map')">Map</a>
-      </li>
-      <li class="nav__list-item" >
-        <a class="nav__list-link" routerLink="/animals/gorilla" routerLinkActivate="active" [class.active]="url.includes('animals')">Zoos</a>
+      <li class="nav__list-item">
+        <a
+          class="nav__list-link"
+          routerLink="/map"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          >Map</a
+        >
       </li>
       <li class="nav__list-item">
-        <a class="nav__list-link" routerLink="/contact" routerLinkActivate="active" [class.active]="url.includes('contact')">Contact us</a>
+        <a
+          class="nav__list-link"
+          routerLink="/animals/gorilla"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          >Zoos</a
+        >
+      </li>
+      <li class="nav__list-item">
+        <a
+          class="nav__list-link"
+          routerLink="/contact"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          >Contact us</a
+        >
       </li>
     </ul>
   </nav>
