--- a/Pet-Story/src/app/core/components/header/header.component.scss
+++ b/Pet-Story/src/app/core/components/header/header.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles.scss';
+@import "../../../../styles.scss";
 
 :host {
   width: 100%;
@@ -32,7 +32,7 @@
 
   &__list-link {
     color: $white;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -50,5 +50,4 @@
   &__list-link.active {
     color: $orange;
   }
-
 }
