--- a/Pet-Story/src/app/start-page/components/backstage/backstage.component.scss
+++ b/Pet-Story/src/app/start-page/components/backstage/backstage.component.scss
@@ -1,18 +1,17 @@
-@import '../../../../styles.scss';
+@import "../../../../styles.scss";
 
 * {
   box-sizing: border-box;
 }
 
 .backstage {
-  background: url('../../../../assets/images/giant-panda.png');
+  background: url("../../../../assets/images/giant-panda.png");
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size: cover;
   background-position-y: -80px;
   max-width: 1600px;
   padding-top: 20px;
   overflow: hidden;
-
 
   &__content {
     display: flex;
@@ -24,7 +23,7 @@
     left: -386px;
     top: 80px;
     z-index: 10;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 700;
     font-size: 106.496px;
@@ -44,15 +43,15 @@
     height: 465px;
     border: none;
     border-radius: 100%;
-    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+    background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
   }
   &__button {
     width: 300px;
     height: 55px;
-    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+    background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
     border-radius: 25px;
     color: $white;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -68,7 +67,7 @@
     margin-bottom: 100px;
     &:hover {
       cursor: pointer;
-      background: #E47209;
+      background: #e47209;
     }
     &:active {
       cursor: pointer;
