refactor: convert images

--- a/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.html
+++ b/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.html
@@ -2,7 +2,7 @@
   <h2 class="info__title">Giant Panda</h2>
   <div class="info__main">
     <div class="info__foto">
-      <img src="assets/images/panda-info.png" />
+      <img src="assets/images/panda-info.webp" />      
     </div>
     <div class="info__description">
       <div class="info__content">
