--- a/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.html
+++ b/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.html
@@ -2,7 +2,7 @@
   <h2 class="info__title">Alligator</h2>
   <div class="info__main">
     <div class="info__foto">
-      <img src="assets/images/crocodile-info.png">
+      <img src="assets/images/crocodile-info.webp">
     </div>
     <div class="info__description">
       <div class="info__content">Alligators differ from other members of the crocodile family in having a <span class="info__important">wider snout</span>; their eyes are more dorsal (at the top of the head). Large alligators' eyes glow red; small alligators' eyes glow green. Alligators can be spotted in the dark by this sign.</div>
