feat: add blocks for donate

--- a/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.html
+++ b/Pet-Story/src/app/animals/components/crocodile/crocodile-info/crocodile-info.component.html
@@ -7,7 +7,7 @@
     <div class="info__description">
       <div class="info__content">Alligators differ from other members of the crocodile family in having a <span class="info__important">wider snout</span>; their eyes are more dorsal (at the top of the head). Large alligators' eyes glow red; small alligators' eyes glow green. Alligators can be spotted in the dark by this sign.</div>
       <div class="info__button">
-        <app-button [content]="content"></app-button>
+        <app-button [content]="content" routerLink="/donate" [queryParams]="{id: 'alligator'}"></app-button>
       </div>
     </div>
   </div>
