--- a/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.html
+++ b/Pet-Story/src/app/animals/components/panda/panda-info/panda-info.component.html
@@ -17,7 +17,7 @@
         programs.
       </div>
       <div class="info__button">
-        <app-button [content]="content"></app-button>
+        <app-button [content]="content" routerLink="/donate" [queryParams]="{id: 'panda'}"></app-button>
       </div>
     </div>
   </div>
