--- a/Pet-Story/src/app/animals/components/eagle/eagle-info/eagle-info.component.html
+++ b/Pet-Story/src/app/animals/components/eagle/eagle-info/eagle-info.component.html
@@ -7,7 +7,7 @@
     <div class="info__description">
       <div class="info__content">There are about <span class="info__important">40 species</span> of these birds in the world. The largest eagle is the <span class="info__important">Golden Eagle</span>. It reaches a length of 95 cm and a wingspan of over two meters. Its plumage ranges from golden to t. brown. They nest exclusively in mountainous areas. They hunt in pairs and mainly during daylight hours. They feed on birds, squirrels, martens, hares and even larger animals.</div>
       <div class="info__button">
-        <app-button [content]="content"></app-button>
+        <app-button [content]="content" routerLink="/donate" [queryParams]="{id: 'eagle'}"></app-button>
       </div>
     </div>
   </div>
