--- a/Pet-Story/src/app/animals/components/info/info.component.html
+++ b/Pet-Story/src/app/animals/components/info/info.component.html
@@ -8,7 +8,7 @@
       <div class="info__content">Western lowland gorillas live in troops led by a dominant silverback, several adult females, and their offspring.
         There are two species of gorilla, each containing two subspecies. The two species are eastern and western, and the four sub-species are <span class="info__important">Cross River</span> and <span class="info__important">Western</span> Lowland (are sub-species of the Western species) and Grauer’s and Mountain (are sub-species of the Eastern species).</div>
       <div class="info__button">
-        <app-button [content]="content"></app-button>
+        <app-button [content]="content" routerLink="/donate" [queryParams]="{id: 'gorilla'}"></app-button>
       </div>
     </div>
   </div>
