--- a/Pet-Story/src/app/donate/donate.component.html
+++ b/Pet-Story/src/app/donate/donate.component.html
@@ -1,1 +1,34 @@
-<p>donate works!</p>
+<section class="donate">
+  <div class="donate__image"></div>
+  <div class="donate__wrapper">
+    <div class="donate__reopen">
+      <h2 class="donate__reopen-title">THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!</h2>
+      <p class="donate__reopen-content">Even though the Zoo has been able to reopen, we are at a greatly reduced capacity with educational programs and public and private events cancelled or postponed for additional months. We need you now more than ever to help ensure that we overcome these challenges. We have been actively raising funds in the community, and we are grateful for the generosity.  But much more support is still needed, and we need your help! Please consider a gift today – no matter what size – to help us sustain our mission.</p>
+    </div>
+    <div class="donate__pick">
+      <h2 class="donate__pick-title">Donation Information</h2>
+      <div class="donate__pick-block">
+        <h1 class="donate__subtitle">Pick and feed a friend</h1>
+        <p class="donate__paragraph">We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
+        <div class="donate__animal">
+          
+            <div class="donate__count">4
+              <div class="donate__count-text">Panda diet for the day.</div>
+            </div>
+            
+          
+          
+          <div><img src="assets/images/x_icon.png"></div>
+          <img src="{{params}}" alt="{{animal}}">
+        </div>
+        <div class="donate__amount"></div>
+        <div class="donate__form"></div>
+        <div class="donate__button"></div>
+        <p class="donate__share">Share with your friends on social networks </p>      
+      </div>
+       
+    </div>
+  </div>
+
+ 
+</section>
