--- a/Pet-Story/src/app/animals/components/panda/panda-video/panda-video.component.scss
+++ b/Pet-Story/src/app/animals/components/panda/panda-video/panda-video.component.scss
@@ -5,8 +5,7 @@
 
   &__button {
     display: flex;
-    width: 62px;
-    height: 62px;
+    @include size(62px, 62px);
     border-radius: 100%;
     background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
     align-items: center;
@@ -77,14 +76,12 @@
 
 .swiper-slide img {
   display: block;
-  width: 100%;
-  height: 100%;
+  @include size(100%, 100%);
   object-fit: cover;
 }
 
 .swiper {
-  width: 100%;
-  height: 300px;
+  @include size(100%, 300px);
   margin-left: auto;
   margin-right: auto;
 }
@@ -95,8 +92,7 @@
 }
 
 .mySwiper2 {
-  height: 652px;
-  width: 100%;
+  @include size(100%, 652px);
   margin-bottom: 80px;
 }
 
@@ -106,8 +102,7 @@
 }
 
 .mySwiper .swiper-slide {
-  width: 25%;
-  height: 100%;
+  @include size(25%, 100%);
   opacity: 0.4;
 }
 
@@ -117,15 +112,13 @@
 
 .swiper-slide img {
   display: block;
-  width: 100%;
-  height: 100%;
+  @include size(100%, 100%);
   object-fit: cover;
 }
 
 app-panda-video div.swiper-wrapper div.swiper-slide.swiper-slide-visible,
 app-panda-video div.swiper-wrapper div.swiper-slide.swiper-slide-prev {
-  width: 268px;
-  height: 210px;
+  @include size(268px, 210px);
 }
 
 app-panda-video .mySwiper div.swiper-wrapper {
