--- a/Pet-Story/src/app/donate/donate.component.html
+++ b/Pet-Story/src/app/donate/donate.component.html
@@ -41,56 +41,56 @@
               <input class="donate__form-item" type="radio" id="radio1" name="radios" value="5000" formControlName="radios">
               <label for="radio1">
                 <div style="width: 30px;">
-                  <p class="item" style="text-align: center;">0</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
                   <p style="text-align: center;">5000</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio2" name="radios" value="2500" formControlName="radios">
               <label for="radio2">
                 <div style="width: 30px;">
-                  <p class="item" style="text-align: center;">0</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
                   <p style="text-align: center;">2500</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio3" name="radios" value="1000" formControlName="radios">
               <label for="radio3">
                 <div style="width: 30px;">
-                  <p class="item" style="text-align: center;">0</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
                   <p style="text-align: center;">1000</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio4" name="radios" value="500" formControlName="radios">
               <label for="radio4">
                 <div style="width: 30px;">
-                  <p class="item" style="text-align: center;">0</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
                   <p style="text-align: center;">750</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio5" name="radios" value="250" formControlName="radios" checked>
               <label for="radio5">
                 <div style="width: 30px;">
-                  <p class="item" style="text-align: center;">0</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
                   <p style="text-align: center;">500</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio6" name="radios" value="100" formControlName="radios">
               <label for="radio6">
                 <div style="width: 30px;">
-                  <p class="item" style="text-align: center;">0</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
                   <p style="text-align: center;">100</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio7" name="radios" value="50" formControlName="radios">
               <label for="radio7">
                 <div style="width: 30px;">
-                  <p class="item" style="text-align: center;">0</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
                   <p style="text-align: center;">50</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio8" name="radios" value="25" formControlName="radios">
               <label for="radio8">
                 <div style="width: 30px;">
-                  <p class="item" style="text-align: center;">0</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
                   <p style="text-align: center;">25</p>
                 </div>
               </label>
