--- a/Pet-Story/src/app/donate/donate.component.html
+++ b/Pet-Story/src/app/donate/donate.component.html
@@ -26,7 +26,7 @@
         </p>
         <div class="donate__animal">
           <div class="donate__count">
-            4
+            {{foodForDays}}
             <div class="donate__count-text">{{ animal | titlecase }} diet for the day.</div>
           </div>
 
@@ -36,70 +36,78 @@
           <img src="{{ params }}" alt="{{ animal }}" />
         </div>
         <div class="donate__amount">
-          <form [formGroup]="form" class="donate__form" (ngSubmit)="onSubmit()">
+          <h3 class="donate__amount-title">Amount</h3>
+          <form [formGroup]="form" class="donate__form" (ngSubmit)="onSubmit()" (change)="onChoose()">
             <div class="donate__inputs">
+              <div class="donate__background">
+                <div class="donate__line"></div>
+              </div>
               <input class="donate__form-item" type="radio" id="radio1" name="radios" value="5000" formControlName="radios">
               <label for="radio1">
                 <div style="width: 30px;">
-                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
-                  <p style="text-align: center;">5000</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round-out"><span class="donate__round"></span></span></p>
+                  <p class="donate__price" style="text-align: center;">$5000</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio2" name="radios" value="2500" formControlName="radios">
               <label for="radio2">
                 <div style="width: 30px;">
-                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
-                  <p style="text-align: center;">2500</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round-out"><span class="donate__round"></span></span></p>
+                  <p class="donate__price" style="text-align: center;">$2500</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio3" name="radios" value="1000" formControlName="radios">
               <label for="radio3">
                 <div style="width: 30px;">
-                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
-                  <p style="text-align: center;">1000</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round-out"><span class="donate__round"></span></span></p>
+                  <p class="donate__price" style="text-align: center;">$1000</p>
                 </div>
               </label>
-              <input class="donate__form-item" type="radio" id="radio4" name="radios" value="500" formControlName="radios">
+              <input class="donate__form-item" type="radio" id="radio4" name="radios" value="750" formControlName="radios">
               <label for="radio4">
                 <div style="width: 30px;">
-                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
-                  <p style="text-align: center;">750</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round-out"><span class="donate__round"></span></span></p>
+                  <p class="donate__price" style="text-align: center;">$750</p>
                 </div>
               </label>
-              <input class="donate__form-item" type="radio" id="radio5" name="radios" value="250" formControlName="radios" checked>
+              <input class="donate__form-item" type="radio" id="radio5" name="radios" value="500" formControlName="radios" checked>
               <label for="radio5">
                 <div style="width: 30px;">
-                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
-                  <p style="text-align: center;">500</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round-out"><span class="donate__round"></span></span></p>
+                  <p class="donate__price" style="text-align: center;">$500</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio6" name="radios" value="100" formControlName="radios">
               <label for="radio6">
                 <div style="width: 30px;">
-                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
-                  <p style="text-align: center;">100</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round-out"><span class="donate__round"></span></span></p>
+                  <p class="donate__price" style="text-align: center;">$100</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio7" name="radios" value="50" formControlName="radios">
               <label for="radio7">
                 <div style="width: 30px;">
-                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
-                  <p style="text-align: center;">50</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round-out"><span class="donate__round"></span></span></p>
+                  <p class="donate__price" style="text-align: center;">$50</p>
                 </div>
               </label>
               <input class="donate__form-item" type="radio" id="radio8" name="radios" value="25" formControlName="radios">
               <label for="radio8">
                 <div style="width: 30px;">
-                  <p class="donate__item" style="text-align: center;"><span class="donate__round"></span></p>
-                  <p style="text-align: center;">25</p>
+                  <p class="donate__item" style="text-align: center;"><span class="donate__round-out"><span class="donate__round"></span></span></p>
+                  <p class="donate__price" style="text-align: center;">$25</p>
                 </div>
               </label>
             </div>
+            <div style="width: 268px; overflow: hidden;">
+              <div #text style="width: 275px;" (click)="text.style.display = 'none'; text1= true">Another amount</div>
+              <input *ngIf="text1" type="number" formControlName="radios" style="width: 275px;" placeholder="Another amount"/>
+            </div>
+
             <div class="donate__button"><button type="submit">Submit</button></div>
           </form>
         </div>
         <div class="donate__option"></div>
-
         <p class="donate__share">Share with your friends on social networks</p>
       </div>
     </div>
